--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,59 +1,72 @@
+body {
+  margin: 0;
+}
+
 nav {
-    background-color: black;
-    padding: 10px 50px;
+  background-color: black;
+  padding: 10px 50px;
 }
 
 .nav-link {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 .all-parks {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .park-preview {
-    position: relative;
-    margin: 20px;
+  position: relative;
+  margin: 20px;
 }
 
 .park-img {
-    height: 300px;
-    width: 300px;
-    object-fit: cover;
+  height: 300px;
+  width: 300px;
+  object-fit: cover;
 }
 
 .img-text {
-    text-align: center;
-    width: 100%;
-    color: white;
-    position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translate(-50%, 0);
-    padding: 5px 0;
-    background-color: rgba(0,0,0,.3);
-    z-index: 10;
+  text-align: center;
+  width: 100%;
+  color: white;
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  padding: 5px 0;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 10;
 }
 
 .large-img {
-    width: 100%;
-    height: 40vh;
-    object-fit: cover;
+  width: 100%;
+  height: 40vh;
+  object-fit: cover;
 }
 
 .large-img-div {
-    position: relative;
+  position: relative;
 }
 
 .description {
-    color: white;
-    background-color: black;
-    padding: 50px 10vw;
-    margin: 0;
+  color: white;
+  background-color: black;
+  padding: 50px 10vw;
+  margin: 0;
 }
 
 .address {
-    padding: 0 10vw;
+  padding: 0 10vw;
+  margin-bottom: 30px;
+}
+
+.loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
